--- a/Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
+++ b/Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
@@ -35,7 +35,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 122,
-"scroll_position": 102.0,
+"scroll_position": 88.0,
 "selection": true,
 "selection_from_column": 1,
 "selection_from_line": 122,
@@ -113,7 +113,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 150,
-"scroll_position": 134.0,
+"scroll_position": 118.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -141,7 +141,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 15,
-"scroll_position": 0.0,
+"scroll_position": 36.0,
 "selection": true,
 "selection_from_column": 51,
 "selection_from_line": 15,
@@ -154,12 +154,12 @@ state={
 
 state={
 "bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 29,
+"breakpoints": PackedInt32Array(15, 19, 23),
+"column": 1,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 22,
-"scroll_position": 0.0,
+"row": 15,
+"scroll_position": 5.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
