--- a/Cuki-Clash of the Kuins/.godot/editor/project_metadata.cfg
+++ b/Cuki-Clash of the Kuins/.godot/editor/project_metadata.cfg
@@ -42,3 +42,7 @@ Node2D:scale=true
 CharacterBody2D:scale=true
 Area2D:scale=true
 EditorDebuggerRemoteObject:scale=true
+
+[scripts_panel]
+
+show_scripts_panel=true
