--- a/Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
+++ b/Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
@@ -21,7 +21,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 16,
-"scroll_position": 16.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -31,16 +31,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 128,
+"column": 28,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 118,
-"scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 2,
-"selection_from_line": 118,
-"selection_to_column": 128,
-"selection_to_line": 118,
+"row": 62,
+"scroll_position": 50.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -67,7 +63,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 6,
-"scroll_position": 9.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -95,7 +91,7 @@ state={
 "folded_lines": Array[int]([92, 108, 123, 147]),
 "h_scroll_position": 0,
 "row": 121,
-"scroll_position": 96.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -123,7 +119,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 36,
-"scroll_position": 59.0,
+"scroll_position": 0.0,
 "selection": true,
 "selection_from_column": 3,
 "selection_from_line": 36,
@@ -139,7 +135,7 @@ state={
 "breakpoints": PackedInt32Array(),
 "column": 59,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 0,
+"h_scroll_position": 179,
 "row": 13,
 "scroll_position": 0.0,
 "selection": true,
@@ -202,6 +198,34 @@ state={
 "h_scroll_position": 0,
 "row": 12,
 "scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/Vida.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 0,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/GenerAyudas.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 33,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 16,
+"scroll_position": 1.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
