--- a/Cuki-Clash of the Kuins/.godot/editor/editor_layout.cfg
+++ b/Cuki-Clash of the Kuins/.godot/editor/editor_layout.cfg
@@ -28,7 +28,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 <<<<<<<HEADopen_scenes=["res://Pruebas.tscn", "res://Entidades/Cuki.tscn", "res://Entidades/Barril_b.tscn", "res://Entidades/Rabion.tscn", "res://Entidades/blonk.tscn", "res://Entidades/explosive_eater.tscn", "res://Entidades/Explosion.tscn"]
-open_scenes=["res://Pruebas.tscn", "res://Entidades/Totem.tscn"]
+open_scenes=["res://Pruebas.tscn", "res://Entidades/Totem.tscn", "res://Entidades/Barril_b.tscn", "res://Entidades/Explosion.tscn", "res://Entidades/explosive_eater.tscn"]
 current_scene="res://Pruebas.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
