--- a/Cuki-Clash of the Kuins/.godot/editor/editor_layout.cfg
+++ b/Cuki-Clash of the Kuins/.godot/editor/editor_layout.cfg
@@ -4,11 +4,11 @@ dock_filesystem_split=220
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=0
-dock_split_2=-57
+dock_split_2=50
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=197
-dock_hsplit_3=-216
+dock_hsplit_2=203
+dock_hsplit_3=-232
 dock_hsplit_4=0
 dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
@@ -19,8 +19,8 @@ dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
 dock_floating={}
-dock_filesystem_selected_paths=PackedStringArray("res://Entidades/Cuki.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Sprites/Tilesets/", "res://Sprites/Aliados/", "res://Scripts/", "res://Entidades/")
+dock_filesystem_selected_paths=PackedStringArray("res://")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Sprites/", "res://Sprites/Aliados/", "res://Scripts/", "res://Entidades/", "res://Entidades/Enemigos/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -29,14 +29,14 @@ dock_5="Inspector,Node,History"
 
 <<<<<<<HEADopen_scenes=["res://Pruebas.tscn", "res://Entidades/Cuki.tscn", "res://Entidades/Barril_b.tscn", "res://Entidades/Rabion.tscn", "res://Entidades/blonk.tscn", "res://Entidades/explosive_eater.tscn", "res://Entidades/Explosion.tscn"]
 open_scenes=PackedStringArray("res://Entidades/Cuki.tscn")
-current_scene="res://Entidades/Cuki.tscn"
-center_split_offset=-344
+current_scene=""
+center_split_offset=-252
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/Aliados/Cuki.gd", "res://Scripts/EstadoBase.gd", "res://Scripts/MaquinaEstados.gd"]
+open_scripts=["res://Scripts/Elementos combate/Barril.gd", "res://Scripts/Enemigos/Blonk.gd", "res://Scripts/Aliados/Cuki.gd", "res://Scripts/Componentes/ElementalStateMachine.gd", "res://Scripts/Estados/EstadoBase.gd", "res://Scripts/Elementos combate/Explosion.gd", "res://Scripts/Estados/JugadorAtaque.gd", "res://Scripts/Estados/JugadorAtaqueP.gd", "res://Scripts/Estados/JugadorCharging.gd", "res://Scripts/Estados/JugadorDash.gd", "res://Scripts/Estados/JugadorDashAtt.gd", "res://Scripts/Estados/JugadorHerido.gd", "res://Scripts/Estados/JugadorIdle.gd", "res://Scripts/Estados/JugadorMovimiento.gd", "res://Scripts/Estados/MaquinaEstados.gd", "res://Scripts/Enemigos/Rabion.gd"]
 open_help=[]
 script_split_offset=150
 list_split_offset=0
