--- a/Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
+++ b/Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
@@ -3,16 +3,16 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 5,
-"folded_lines": Array[int]([106, 116]),
+"column": 20,
+"folded_lines": Array[int]([106]),
 "h_scroll_position": 0,
-"row": 131,
+"row": 97,
 "scroll_position": 0.0,
 "selection": true,
-"selection_from_column": 33,
-"selection_from_line": 127,
-"selection_to_column": 5,
-"selection_to_line": 131,
+"selection_from_column": 2,
+"selection_from_line": 97,
+"selection_to_column": 20,
+"selection_to_line": 97,
 "syntax_highlighter": "GDScript"
 }
 
@@ -21,12 +21,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 4,
+"column": 15,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 162,
-"scroll_position": 0.0,
-"selection": false,
+"row": 195,
+"scroll_position": 185.0,
+"selection": true,
+"selection_from_column": 1,
+"selection_from_line": 195,
+"selection_to_column": 15,
+"selection_to_line": 195,
 "syntax_highlighter": "GDScript"
 }
 
@@ -77,16 +81,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 23,
-"folded_lines": Array[int]([53, 87, 104, 139, 151, 154, 157, 167]),
-"h_scroll_position": 0,
-"row": 2,
-"scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 20,
-"selection_from_line": 2,
-"selection_to_column": 23,
-"selection_to_line": 2,
+"column": 31,
+"folded_lines": Array[int]([53, 87, 139, 151, 154, 157, 167]),
+"h_scroll_position": 311,
+"row": 96,
+"scroll_position": 62.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -137,16 +137,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 17,
+"column": 11,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 2,
-"scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 14,
-"selection_from_line": 2,
-"selection_to_column": 17,
-"selection_to_line": 2,
+"row": 23,
+"scroll_position": 23.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -155,10 +151,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 4,
-"folded_lines": Array[int]([]),
+"column": 14,
+"folded_lines": Array[int]([9]),
 "h_scroll_position": 0,
-"row": 28,
+"row": 0,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -238,20 +234,6 @@ state={
 "syntax_highlighter": "GDScript"
 }
 
-[res://Scripts/Aliados/Cuki.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 13,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 83,
-"scroll_position": 76.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
 [res://Scripts/Elementos puzzles/Antorcha.gd]
 
 state={
@@ -322,7 +304,81 @@ state={
 "syntax_highlighter": "GDScript"
 }
 
-[res://Scripts/EstadoBase.gd]
+[res://Scripts/Aliados/Cuki.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 21,
+"folded_lines": Array[int]([70]),
+"h_scroll_position": 0,
+"row": 119,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/Estados/EstadoBase.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 15,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 15,
+"scroll_position": 10.0,
+"selection": true,
+"selection_from_column": 5,
+"selection_from_line": 15,
+"selection_to_column": 15,
+"selection_to_line": 15,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/Estados/JugadorAtaque.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 27,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 17,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/Estados/JugadorAtaqueP.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 42,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 6,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/Estados/JugadorCharging.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 35,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 6,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/Estados/JugadorDash.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
@@ -330,22 +386,82 @@ state={
 "column": 12,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 10,
+"row": 56,
+"scroll_position": 41.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/Estados/JugadorDashAtt.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 9,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 3,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
 
-[res://Scripts/MaquinaEstados.gd]
+[res://Scripts/Estados/JugadorHerido.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 38,
+"column": 32,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 17,
-"row": 29,
-"scroll_position": 15.0,
+"h_scroll_position": 0,
+"row": 12,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/Estados/JugadorIdle.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 28,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 15,
+"scroll_position": 14.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/Estados/JugadorMovimiento.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 1,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 22,
+"scroll_position": 18.0,
+"selection": true,
+"selection_from_column": 1,
+"selection_from_line": 22,
+"selection_to_column": 25,
+"selection_to_line": 31,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/Estados/MaquinaEstados.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 23,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 43,
+"scroll_position": 37.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
