--- a/Cuki-Clash of the Kuins/.godot/editor/editor_layout.cfg
+++ b/Cuki-Clash of the Kuins/.godot/editor/editor_layout.cfg
@@ -4,10 +4,10 @@ dock_filesystem_split=220
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=0
-dock_split_2=50
+dock_split_2=-26
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=203
+dock_hsplit_2=352
 dock_hsplit_3=-232
 dock_hsplit_4=0
 dock_1_selected_tab_idx=0
@@ -19,8 +19,8 @@ dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
 dock_floating={}
-dock_filesystem_selected_paths=PackedStringArray("res://")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Sprites/", "res://Sprites/Aliados/", "res://Scripts/", "res://Entidades/", "res://Entidades/Enemigos/")
+dock_filesystem_selected_paths=PackedStringArray("res://Entidades/Elementos combates/Explosion.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Sprites/", "res://Sprites/Objetos/", "res://SFX/", "res://Entidades/", "res://Entidades/Enemigos/", "res://Entidades/Elementos puzzles/", "res://Entidades/Elementos combates/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -28,19 +28,20 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 <<<<<<<HEADopen_scenes=["res://Pruebas.tscn", "res://Entidades/Cuki.tscn", "res://Entidades/Barril_b.tscn", "res://Entidades/Rabion.tscn", "res://Entidades/blonk.tscn", "res://Entidades/explosive_eater.tscn", "res://Entidades/Explosion.tscn"]
-open_scenes=PackedStringArray("res://Entidades/Cuki.tscn")
-current_scene=""
-center_split_offset=-252
+open_scenes=PackedStringArray("res://Entidades/Cuki.tscn", "res://Entidades/Elementos puzzles/Palanca.tscn", "res://Pruebas.tscn")
+current_scene="res://Pruebas.tscn"
+center_split_offset=-288
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/Elementos combate/Barril.gd", "res://Scripts/Enemigos/Blonk.gd", "res://Scripts/Aliados/Cuki.gd", "res://Scripts/Componentes/ElementalStateMachine.gd", "res://Scripts/Estados/EstadoBase.gd", "res://Scripts/Elementos combate/Explosion.gd", "res://Scripts/Estados/JugadorAtaque.gd", "res://Scripts/Estados/JugadorAtaqueP.gd", "res://Scripts/Estados/JugadorCharging.gd", "res://Scripts/Estados/JugadorDash.gd", "res://Scripts/Estados/JugadorDashAtt.gd", "res://Scripts/Estados/JugadorHerido.gd", "res://Scripts/Estados/JugadorIdle.gd", "res://Scripts/Estados/JugadorMovimiento.gd", "res://Scripts/Estados/MaquinaEstados.gd", "res://Scripts/Enemigos/Rabion.gd"]
-open_help=[]
+open_scripts=["res://Scripts/Elementos combate/Barril.gd", "res://Scripts/Enemigos/Blonk.gd", "res://Scripts/Enemigos/Bum.gd", "res://Scripts/Enemigos/Chooty.gd", "res://Scripts/Aliados/Cuki.gd", "res://Scripts/Componentes/ElementalStateMachine.gd", "res://Scripts/EnemySpawner.gd", "res://Scripts/Estados/EstadoBase.gd", "res://Scripts/Elementos combate/Explosion.gd", "res://Scripts/Componentes/GenerAyudas.gd", "res://Scripts/Estados/JugadorAtaque.gd", "res://Scripts/Estados/JugadorAtaqueP.gd", "res://Scripts/Estados/JugadorCharging.gd", "res://Scripts/Estados/JugadorDash.gd", "res://Scripts/Estados/JugadorDashAtt.gd", "res://Scripts/Estados/JugadorHerido.gd", "res://Scripts/Estados/JugadorIdle.gd", "res://Scripts/Estados/JugadorMovimiento.gd", "res://Scripts/Estados/MaquinaEstados.gd", "res://Nivel.gd", "res://Scripts/Elementos puzzles/Palanca.gd", "res://Scripts/Enemigos/Proyectiles Chooty/Piedra.gd", "res://Scripts/Enemigos/Rabion.gd", "res://Scripts/Componentes/Salud.gd", "res://Scripts/Elementos combate/Vida.gd"]
+open_help=["ProgressBar", "TextureProgressBar"]
 script_split_offset=150
 list_split_offset=0
-selected_script="res://Scripts/Aliados/Cuki.gd"
+selected_script="res://Nivel.gd"
 
 [editor_log]
 
