--- a/Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
+++ b/Cuki-Clash of the Kuins/.godot/editor/script_editor_cache.cfg
@@ -3,16 +3,12 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 20,
-"folded_lines": Array[int]([106]),
+"column": 36,
+"folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 97,
-"scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 2,
-"selection_from_line": 97,
-"selection_to_column": 20,
-"selection_to_line": 97,
+"row": 104,
+"scroll_position": 135.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -21,16 +17,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 15,
+"column": 14,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 195,
-"scroll_position": 185.0,
-"selection": true,
-"selection_from_column": 1,
-"selection_from_line": 195,
-"selection_to_column": 15,
-"selection_to_line": 195,
+"row": 192,
+"scroll_position": 172.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -38,7 +30,7 @@ state={
 
 state={
 "bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(40),
+"breakpoints": PackedInt32Array(),
 "column": 36,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
@@ -53,10 +45,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 7,
+"column": 21,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 41,
+"row": 45,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -67,11 +59,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 22,
+"column": 36,
 "folded_lines": Array[int]([2, 9, 19]),
 "h_scroll_position": 0,
-"row": 249,
-"scroll_position": 0.0,
+"row": 213,
+"scroll_position": 225.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -81,11 +73,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 31,
-"folded_lines": Array[int]([53, 87, 139, 151, 154, 157, 167]),
-"h_scroll_position": 311,
-"row": 96,
-"scroll_position": 62.0,
+"column": 29,
+"folded_lines": Array[int]([49, 83, 135, 145, 148, 158]),
+"h_scroll_position": 0,
+"row": 143,
+"scroll_position": 115.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -95,11 +87,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 34,
-"folded_lines": Array[int]([189]),
+"column": 19,
+"folded_lines": Array[int]([180]),
 "h_scroll_position": 0,
-"row": 27,
-"scroll_position": 0.0,
+"row": 174,
+"scroll_position": 161.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -113,7 +105,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 17,
-"scroll_position": 0.0,
+"scroll_position": 11.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -139,9 +131,9 @@ state={
 "breakpoints": PackedInt32Array(),
 "column": 11,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 0,
+"h_scroll_position": 108,
 "row": 23,
-"scroll_position": 23.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -155,7 +147,7 @@ state={
 "folded_lines": Array[int]([9]),
 "h_scroll_position": 0,
 "row": 0,
-"scroll_position": 0.0,
+"scroll_position": 5.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -165,11 +157,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 18,
+"column": 15,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 11,
-"scroll_position": 0.0,
+"row": 15,
+"scroll_position": 5.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -211,11 +203,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(88, 89),
-"column": 21,
+"column": 26,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 12,
-"scroll_position": 0.0,
+"row": 71,
+"scroll_position": 48.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -298,7 +290,7 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 9,
+"row": 7,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -309,11 +301,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 21,
-"folded_lines": Array[int]([70]),
+"column": 41,
+"folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 119,
-"scroll_position": 0.0,
+"row": 108,
+"scroll_position": 108.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -355,12 +347,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 42,
+"column": 17,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 6,
+"row": 10,
 "scroll_position": 0.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 17,
+"selection_from_line": 10,
+"selection_to_column": 26,
+"selection_to_line": 10,
 "syntax_highlighter": "GDScript"
 }
 
@@ -457,11 +453,25 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 23,
+"column": 31,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 43,
-"scroll_position": 37.0,
+"row": 16,
+"scroll_position": 16.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Nivel.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 24,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 8,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
